# Schedune

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
api/: index.html
architecture/: index.html
docs/: api.md  architecture.md  index.md  live-lab.md  quickstart.md  recovery.md  roadmap.md  runtime-support.md  state-machine.md  troubleshooting.md
examples/curls/: intake.sh  launch-dry-run.sh  launch-execute.sh  launch-plan.sh  launch-validate.sh  plan-launch.sh  schedule-explain.sh
examples/launch-specs/: cloudhypervisor-execute.json  cloudhypervisor-validate.json  firecracker-dryrun.json  plan-launch.json  qemu-execute.json  qemu-validate.json
examples/plans/: vm-plan.json
examples/workload-intents/: vm-arm64.json  (+3 more)
quickstart/: index.html
recovery/: index.html
runtime-support/: index.html
schedune-agent/: Cargo.toml
schedune-agent/docs/: schema_v1alpha1.md
schedune-agent/src/: fixtures_test.rs  main.rs  prepare.rs
schedune-agent/src/api/: mod.rs
schedune-agent/src/capabilities/: mod.rs
schedune-agent/src/collectors/: mod.rs  system.rs  virtualization.rs
schedune-agent/src/config/: mod.rs
schedune-agent/src/daemon/: mod.rs
schedune-agent/src/health/: mod.rs
schedune-agent/src/migration/: mod.rs
schedune-agent/src/scheduler_contract/: mod.rs
schedune-control-plane/: go.mod  go.sum
scripts/: demo-fixture.sh  demo-live-lab.sh  demo.sh  doctor.sh  smoke-test.sh
search/: search_index.json
state-machine/: index.html
troubleshooting/: index.html
var/: schedune.db
(+85 files in other folders)
